--- a/src/Hackathon_CV_Portal.Web/Views/Account/ResetPassword.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/ResetPassword.cshtml
@@ -29,7 +29,7 @@
                                 <input asp-for="ConfirmPassword" class="form-control" />
                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
-                            <button type="submit" class="btn btn-default">აღდგენა</button>
+                            <button type="submit" class="btn mt-4 btn-default">აღდგენა</button>
                         </form>
                     </div>
                 </div>
