--- a/src/Hackathon_CV_Portal.Web/Views/Home/Success.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Success.cshtml
@@ -5,7 +5,7 @@
 <body>
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <p class="lead">
+            <p class="lead mb-4">
                 ოპერაცია წარმატებით შესრულდა.
             </p>
             <a asp-controller="Home" asp-action="Idex" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
