--- a/src/Hackathon_CV_Portal.Web/Views/Account/ForgotPassword.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/ForgotPassword.cshtml
@@ -8,9 +8,9 @@
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5 ">
-                <div class="" style="border-radius: 1rem;">
+                <div style="border-radius: 1rem;">
                     <form asp-action="ForgotPassword" method="post">
-                        <div class="alert alert-success bg-soft-primary border-0" role="alert">
+                        <div class="alert alert-success text-center bg-soft-primary border-0" role="alert">
                             შეიყვანეთ თქვენი email-მისამართი და გამოგიგზანით პაროლის აღსადგენ ლინკს.
                         </div>
                         @*<div asp-validation-summary="All" class="text-danger"></div>*@
@@ -18,7 +18,9 @@
                             <input type="email" class="form-control" name="email" placeholder="Email Address" asp-for="Email" class="form-control" />
                             @*<span asp-validation-for="Email" class="text-danger"></span>*@
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">პაროლის აღდგენა</button>
+                        <div class="text-center">
+                            <button type="submit" class="btn mt-4 btn-primary btn-lg btn-block">პაროლის აღდგენა</button>
+                        </div>
                     </form>
                 </div>
             </div>
