--- a/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
@@ -8,11 +8,11 @@
  <section class="vh-100" style="background-color: #eee;">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-8 col-xl-11">
+      <div class="col-lg-8 col-xl-6">
         <div class="card text-black" style="border-radius: 25px;">
-          <div class="card-body bg-dark p-md-5" style="border-radius: 1rem;">
+          <div class="card-body bg-primary text-white p-md-5" style="border-radius: 1rem;">
             <div class="row justify-content-center">
-              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+              <div class="col-md-10 col-lg-10 col-xl-12 order-2 order-lg-1">
 
                 <form class="mx-1 mx-md-4" asp-action="Register" method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
@@ -52,7 +52,7 @@
                     </div>
                   </div>
 
-                    <div class="form-group">
+                    <div class="form-group mt-1">
                         <div class="checkbox">
                             <label asp-for="IsCompany">
                                 <input asp-for="IsCompany" />
@@ -60,7 +60,7 @@
                             </label>
                         </div>
                     </div>
-                  <div class="form-group">
+                  <div class="form-group mt-1">
                     <div class="checkbox">
                         <label asp-for="AggreeTOS">
                                 <input asp-for="AggreeTOS" />
@@ -69,7 +69,7 @@
                     </div>
                   </div>
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <input class="btn btn-primary btn-lg" type="submit" value="რეგისტრაცია" />
+                      <input class="btn border mt-4 btn-primary btn-lg" type="submit" value="რეგისტრაცია" />
                   </div>
                 </form>
 
