--- a/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
@@ -53,7 +53,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7403979846913!2d44.7221719156637!3d41.72612038288986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730a51b3d4a7%3A0x7811affb5ef51f2f!2s1187a%2C%20186%20Shalva%20Nutsubidze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1657948507896!5m2!1sen!2sge"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-md-6">
