--- a/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
@@ -3,48 +3,50 @@
 }
 
 <div class="container">
-    <div class="row justify-content-start">
+    <div class="row justify-content-start mt-3">
         <div class="col-10 col-lg-8">
             <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსაური</h1>
-            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">მოძებნე სამსახური</a>
-            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">მოძებნე ტალანტი</a>
+            <div class="row">
+                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">მოძებნე სამსახური</a>
+                <a href="" class="btn btn-secondary py-md-3 px-md-5 col-5 animated slideInRight">მოძებნე ტალანტი</a>
+            </div>
         </div>
     </div>
 </div>
 
 @* <!-- Search Start -->
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-            <div class="container">
-                <div class="row g-2">
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <div class="col-md-4">
-                                <input type="text" id="keywordId" class="form-control border-0" placeholder="Keyword" />
-                            </div>
-                            <div class="col-md-4">
-                                <select class="form-select border-0">
-                                    <option selected>Category</option>
-                                    <option value="1">Category 1</option>
-                                    <option value="2">Category 2</option>
-                                    <option value="3">Category 3</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4">
-                                <select class="form-select border-0">
-                                    <option selected>Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <button onclick="searchFunc()" class="btn btn-dark border-0 w-100">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div>*@
+    <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+    <div class="container">
+    <div class="row g-2">
+    <div class="col-md-10">
+    <div class="row g-2">
+    <div class="col-md-4">
+    <input type="text" id="keywordId" class="form-control border-0" placeholder="Keyword" />
+    </div>
+    <div class="col-md-4">
+    <select class="form-select border-0">
+    <option selected>Category</option>
+    <option value="1">Category 1</option>
+    <option value="2">Category 2</option>
+    <option value="3">Category 3</option>
+    </select>
+    </div>
+    <div class="col-md-4">
+    <select class="form-select border-0">
+    <option selected>Location</option>
+    <option value="1">Location 1</option>
+    <option value="2">Location 2</option>
+    <option value="3">Location 3</option>
+    </select>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-2">
+    <button onclick="searchFunc()" class="btn btn-dark border-0 w-100">Search</button>
+    </div>
+    </div>
+    </div>
+    </div>*@
 <!-- Search End -->
 
 <div class="container-xxl py-5">
@@ -79,7 +81,7 @@
 </div>
 
 @*<script>
-function searchFunc() {
+    function searchFunc() {
     var a = document.getElementById('keywordId').value ;
     console.log(a);
 
@@ -88,6 +90,6 @@ function searchFunc() {
     var rurl = base_url + "Vacansy?searchCategory=" + a;
     console.log(rurl);
     window.location.replace(rurl);
-}
-</script>*@
+    }
+    </script>*@
 
