--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
@@ -47,7 +48,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div class="navbar-nav ms-auto p-4 pb-2 p-lg-0">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">მთავარი</a>
 
                     <div class="nav-item dropdown">
@@ -89,7 +90,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
