--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav ml-4 ml-lg-0">
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
