--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
@@ -7,13 +7,13 @@
 }
 
 <div class="row">
-    <div class="col-md-6 offset-lg-3 offset-md-2">
+    <div class="col-md-6 offset-lg-3 offset-md-2 offset-lg-2">
         <div class="row">
             <p>
             <h4 class="text-center">შექმენი ვაკანსია</h4>
             </p>
             <div class="row">
-                <div class="col-md-8 offset-2">
+                <div class="col-md-8 offset-md-2 offset-lg-2">
                     <form asp-action="Add" method="post">
                         <div class="row">
                             <div class="col-md-6">
