--- a/src/Hackathon_CV_Portal.Web/wwwroot/css/style.css
+++ b/src/Hackathon_CV_Portal.Web/wwwroot/css/style.css
@@ -1,4 +1,4 @@
-/********** Template CSS **********/
+﻿/********** Template CSS **********/
 :root {
     --primary: #00B074;
     --secondary: #2B9BFF;
@@ -72,8 +72,8 @@
 /*** Navbar ***/
 .navbar .dropdown-toggle::after {
     border: none;
-    content: "\f107";
-    font-family: 'firago'; 
+    content: "▼";
+    font-family: 'firago';
     font-weight: 900;
     vertical-align: middle;
     margin-left: 5px;
