add resp and quali

--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
@@ -85,7 +85,7 @@
                                     <input asp-for="Description" class="form-control" />
                                     <span asp-validation-for="Description" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
+                               @* <div class="form-group">
                                     <label asp-for="Responsibility"></label>
                                     <span class="text-danger">*</span>
                                     <input asp-for="Responsibility" class="form-control" />
@@ -96,7 +96,7 @@
                                     <span class="text-danger">*</span>
                                     <input asp-for="Qualifications" class="form-control" />
                                     <span asp-validation-for="Qualifications" class="text-danger"></span>
-                                </div>
+                                </div>*@
                             </div>
                         </div>
                         <div class="form-group">
