--- a/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using Hackathon_CV_Portal.Application.Implementations.AboutUs.Models
+@using System.Security.Claims
+@model AboutVM
+
+@{
     ViewData["Title"] = "Re:Hire";
 }
 
@@ -7,89 +11,20 @@
         <div class="col-10 col-lg-8">
             <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსაური</h1>
             <div class="row">
-                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">მოძებნე სამსახური</a>
-                <a href="" class="btn btn-secondary py-md-3 px-md-5 col-5 animated slideInRight">მოძებნე ტალანტი</a>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                {
+                    <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">მოდი სამსახურს ვიპოვი</a>
+                    <a asp-area="" asp-controller="Vacancy" asp-action="Index" asp-route-withFiL="@false" asp-route-isFav="@true" class="btn btn-secondary py-md-3 px-md-5 col-5 animated slideInRight">ფავორიტი ვაკანსიები</a>
+                }
+
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Company"))
+                {
+                    <a asp-controller="Vacancy" asp-action="Index" asp-route-companyId="@int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" class="btn btn-primary py-md-3 px-md-5 col-5 animated slideInRight">შენი გამოქვეყნებული ვაკანსიები</a>
+                }
             </div>
         </div>
     </div>
 </div>
 
-@* <!-- Search Start -->
-    <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-    <div class="container">
-    <div class="row g-2">
-    <div class="col-md-10">
-    <div class="row g-2">
-    <div class="col-md-4">
-    <input type="text" id="keywordId" class="form-control border-0" placeholder="Keyword" />
-    </div>
-    <div class="col-md-4">
-    <select class="form-select border-0">
-    <option selected>Category</option>
-    <option value="1">Category 1</option>
-    <option value="2">Category 2</option>
-    <option value="3">Category 3</option>
-    </select>
-    </div>
-    <div class="col-md-4">
-    <select class="form-select border-0">
-    <option selected>Location</option>
-    <option value="1">Location 1</option>
-    <option value="2">Location 2</option>
-    <option value="3">Location 3</option>
-    </select>
-    </div>
-    </div>
-    </div>
-    <div class="col-md-2">
-    <button onclick="searchFunc()" class="btn btn-dark border-0 w-100">Search</button>
-    </div>
-    </div>
-    </div>
-    </div>*@
-<!-- Search End -->
-
-<div class="container-xxl py-5">
-    <div class="container">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                <div class="row g-0 about-bg rounded overflow-hidden">
-                    <div class="col-6 text-start">
-                        <img class="~/img-fluid w-100" src="img/about-1.jpg">
-                    </div>
-                    <div class="col-6 text-start">
-                        <img class="~/img-fluid" src="img/about-2.jpg" style="width: 85%; margin-top: 15%;">
-                    </div>
-                    <div class="col-6 text-end">
-                        <img class="~/img-fluid" src="img/about-3.jpg" style="width: 85%;">
-                    </div>
-                    <div class="col-6 text-end">
-                        <img class="~/img-fluid w-100" src="img/about-4.jpg">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                <h1 class="mb-4">ჩვენ გეხმარებით, რომ იპოვოთ სასურველი სამსახური და სასურველი თანამშრომელი</h1>
-                <p class="mb-4">დასაქმება ასე მარტივი არასდროს ყოფილა</p>
-                <p><i class="fa fa-check text-primary me-3"></i>სწრაფად</p>
-                <p><i class="fa fa-check text-primary me-3"></i>მარტივად</p>
-                <p><i class="fa fa-check text-primary me-3"></i>ხარისხიანად</p>
-                <a class="btn btn-primary py-3 px-5 mt-3" href="http://taoba.edu.ge/en/">გაიგე უფრო მეტი</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-@*<script>
-    function searchFunc() {
-    var a = document.getElementById('keywordId').value ;
-    console.log(a);
-
-    var base_url = window.location.origin;
-
-    var rurl = base_url + "Vacansy?searchCategory=" + a;
-    console.log(rurl);
-    window.location.replace(rurl);
-    }
-    </script>*@
+@Html.Raw(Model.Content);
 
